[gd_scene load_steps=3 format=3 uid="uid://dtoic0bf8v2f2"]

[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Vectors/Vector3Labels.gd" id="1_joewg"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Label_Element.gd" id="2_857nh"]

[node name="Vector3Labels" type="BoxContainer"]
script = ExtResource("1_joewg")
label_x_text = &""
label_y_text = &""
label_z_text = &""

[node name="LabelX" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "X"
horizontal_alignment = 1
script = ExtResource("2_857nh")
max_length = 5

[node name="SpacerX" type="Control" parent="."]
layout_mode = 2

[node name="LabelY" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Y"
horizontal_alignment = 1
script = ExtResource("2_857nh")
max_length = 5

[node name="SpacerY" type="Control" parent="."]
layout_mode = 2

[node name="LabelZ" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Z
"
horizontal_alignment = 1
script = ExtResource("2_857nh")
max_length = 5

[node name="SpacerZ" type="Control" parent="."]
layout_mode = 2
